<resources>
    <string name="app_name">Truck Sharing</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in_welcome_label">Truck Sharing</string>
    <string name="sign_up_button_label">SIGN UP</string>
    <string name="login_button_label">LOGIN</string>
    <string name="username_text_view_label">User Name: </string>
    <string name="password_text_view_label">Password: </string>
    <string name="username_hint_label">Enter your name</string>
    <string name="password_hint_label">Enter your password </string>
    <string name="add_image_text_label">Add Image</string>
    <string name="signup_add_image_desc">Press to add image</string>
    <string name="sign_up_full_name_hint">Full Name</string>
    <string name="sign_up_user_name_hint">User Name</string>
    <string name="sign_up_password_hint">Password</string>
    <string name="sign_up_confirm_password_hint">Confirm Password</string>
    <string name="sign_up_phone_hint">Phone Number</string>
    <string name="sign_up_create_account_button_label">Create Account</string>
    <string name="add_new_delivery_button">Add New Delivery</string>
    <string name="add_new_delivery_title">New Delivery</string>
    <string name="new_delivery_receiver_name">Receiver Name:</string>
    <string name="newDeliveryPickUpLabel">Pick Up Date:</string>
    <string name="new_delivery_pick_up_time">Pick Up Time</string>
    <string name="new_delivery_pick_up_location">Pick Up Location</string>
    <string name="new_delivery_next_button">Next</string>
    <string name="new_delivery_good_types">Good Types: </string>

</resources>