<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".Fragments.SignUpFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.card.MaterialCardView
            style="@style/Widget.Material3.CardView.Elevated"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <com.google.android.material.card.MaterialCardView
                        android:id="@+id/signUpFragmentImageCard"
                        android:layout_width="350dp"
                        android:layout_height="150dp"
                        style="@style/Widget.Material3.CardView.Outlined"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        app:cardElevation="1dp">

                        <ImageView
                            android:id="@+id/signUpFragmentImageView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:contentDescription="@string/signup_add_image_desc"
                            android:src="@drawable/baseline_camera_alt_24" />

                    </com.google.android.material.card.MaterialCardView>

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="20dp"
                        android:text="@string/add_image_text_label"
                        android:textAlignment="center"
                        android:textSize="25sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFragmentFullNameInputViewLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="Full Name"
                        app:errorEnabled="true"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpFragmentFullNameInputView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFragmentUserNameInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="Username"
                        app:errorEnabled="true"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpFragmentUserNameInputView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFragmentPasswordInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="Password"
                        app:errorEnabled="true"
                        app:endIconMode="password_toggle"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpFragmentPasswordInputView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFragmentConfirmPasswordInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="Confirm Password"
                        app:errorEnabled="true"
                        app:endIconMode="password_toggle"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpFragmentConfirmPasswordInputView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/signUpFragmentPhoneInputLayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:hint="Phone Number"
                        app:errorEnabled="true"
                        tools:ignore="HardcodedText">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/signUpFragmentPhoneInputView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            tools:ignore="TextContrastCheck" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/signUpFragmentCreateAccountButton"
                        style="@style/Widget.Material3.Button.ElevatedButton"
                        android:layout_width="250dp"
                        android:layout_height="80dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="50dp"
                        android:text="@string/sign_up_button_label"
                        android:textSize="30sp" />

                </LinearLayout>
            </ScrollView>

        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>