<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.NewDeliveryFragmentPageOne"
    android:transitionGroup="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:orientation="vertical"
                android:paddingBottom="30dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/newDeliveryTitleTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/add_new_delivery_title"
                    android:textAlignment="center"
                    android:textIsSelectable="false"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginEnd="5dp"
                    android:hint="Enter receiver name"
                    tools:ignore="HardcodedText">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newDeliveryReceiverNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:ignore="DuplicateSpeakableTextCheck,VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newDeliverySenderNameInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter sender name"
                        tools:ignore="DuplicateSpeakableTextCheck,HardcodedText,VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:text="@string/newDeliveryPickUpLabel"
                        android:textAlignment="viewStart"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <CalendarView
                        android:id="@+id/newDeliveryCalenderView"
                        android:layout_width="250dp"
                        android:layout_height="250dp"
                        android:layout_marginBottom="20dp" />
                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginEnd="5dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline"
                    app:layout_constraintTop_toTopOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/newDeliveryTimeInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="Enter a pickup time"
                        android:inputType="time"
                        tools:ignore="HardcodedText,VisualLintTextFieldSize,TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Pick up location"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/newDeliveryPickUpLocationInput"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/place_autocomplete_fragment" />

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:text="Drop off location"
                    android:textSize="20sp"
                    tools:ignore="HardcodedText" />

                <androidx.fragment.app.FragmentContainerView
                    android:id="@+id/newDeliveryDropOffLocationInput"
                    android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:layout="@layout/place_autocomplete_fragment" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/newDeliveryNextButton"
                    style="@style/Widget.Material3.Button.ElevatedButton"
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="30dp"
                    android:text="@string/new_delivery_next_button"
                    android:textSize="40sp"
                    android:textStyle="bold"
                    tools:ignore="TextSizeCheck">

                </com.google.android.material.button.MaterialButton>

            </LinearLayout>
        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>